<?xml version="1.0"?>
<package format="2">
    <name>execution_monitoring</name>
    <version>1.0.0</version>
    <description>Execution monitoring framework for long-term autonomous mobile outdoor robots.</description>
    <maintainer email="tbohne@uni-osnabrueck.de">Tim Bohne</maintainer>
    <license>MIT</license>
    <author email="tbohne@uni-osnabrueck.de">Tim Bohne</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>actionlib_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>message_generation</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <export></export>
</package>
